<resources>
    <string name="app_name">Project1</string>

    <!--Main Activity-->
    <string name="MainTitle">Job Search</string>
    <string name="MainUsernameET">Username</string>
    <string name="MainPasswordET">Password</string>
    <string name="LogInBtn">Log In</string>
    <string name="NotRegText">Not Registered?</string>
    <string name="CreateAccBtn">Create an Account</string>

    <!--User Main Menu-->
    <string name="UserMenuTitle">Main Menu</string>
    <string name="MenuSearchBtn">Search Jobs</string>
    <string name="RecommendBtn">Recommended Jobs</string>
    <string name="EditAccBtn">Edit Account</string>

    <string name="recommended_jobs_title">Recommeded Jobs</string>

    <!--Create Account-->
    <string name="confirm_password_str">Confirm Password</string>

    <!--Admin-->
    <string name="admin">Admin</string>
    <string name="view_edit_users">View/Edit Users</string>
    <string name="view_saved_jobs">View Saved Jobs</string>

    <!--Edit Account-->
    <string name="lang_str">Language</string>
    <string name="loc_str">Location</string>
    <string name="full_time_str">Full Time</string>
    <string name="yes_str">Yes</string>
    <string name="no_str">No</string>
    <string name="save_str">Save</string>
    <string name="saved_jobs">Saved Jobs</string>
    <string-array name="langs_arr">
        <item>python</item>
        <item>java</item>
        <item>ruby</item>
        <item>js</item>
        <item>node</item>
        <item>c</item>
        <item>c#</item>
        <item>php</item>
        <item>lua</item>
        <item>julia</item>
        <item>fortran</item>
        <item>cobol</item>
    </string-array>

    <!---Recommended Jobs -->
    <string name = "recommended_jobs_title">Recommended Jobs</string>
</resources>
