<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/UserMenuTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="@string/UserMenuTitle"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/MenuSearchBtn"
        android:layout_width="90pt"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="@string/MenuSearchBtn"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UserMenuTitle" />

    <Button
        android:id="@+id/RecommendBtn"
        android:layout_width="90pt"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/RecommendBtn"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MenuSearchBtn" />

    <Button
        android:id="@+id/SavedJobsBtn"
        android:layout_width="90pt"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/saved_jobs"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RecommendBtn" />

    <Button
        android:id="@+id/EditAccBtn"
        android:layout_width="90pt"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/EditAccBtn"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SavedJobsBtn" />

    <Button
        android:id="@+id/AdminBtn"
        android:layout_width="90pt"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/admin"
        android:textAllCaps="false"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditAccBtn" />
</androidx.constraintlayout.widget.ConstraintLayout>