<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminActivity">


    <TextView
        android:id="@+id/textViewAdmin"
        android:layout_width="176dp"
        android:layout_height="47dp"
        android:layout_marginTop="52dp"
        android:text="@string/admin"
        android:textAlignment="center"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonEditUsers"
        android:layout_width="180dp"
        android:layout_height="42dp"
        android:layout_marginTop="216dp"
        android:text="@string/view_edit_users"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAdmin" />

    <Button
        android:id="@+id/buttonAdminSavedJobs"
        android:layout_width="180dp"
        android:layout_height="42dp"
        android:layout_marginTop="32dp"
        android:text="@string/view_saved_jobs"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonEditUsers"
        app:layout_constraintVertical_bias="0.13" />

</androidx.constraintlayout.widget.ConstraintLayout>